Muted css styling for a visited nav link.

--- a/src/components/SurveyResponses/SurveyResponses.css
+++ b/src/components/SurveyResponses/SurveyResponses.css
@@ -2,8 +2,9 @@
     background-color: lightgrey;
     margin-right: 5px;
     
+    
 }
 
-a:visited {
-    color: white;
-}
+/* a:visited {
+    color: red;
+} */
